# fastapi_songs

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  pyproject.toml  requirements.txt
.ebextensions/: 01_fastapi.config
src/fastapi_songs/: database.py  init_db.py  main.py  models.py
